        preserves words like KIA'd, FYIQ'ed and other things that are
        likely to be partial acronyms.
  
      - Twitter names. I.e. tokens matching @[A-Za-z0-9_]+ will be
        tokenized as-is. This ensures that Hailo users like
        Bot::Twatterhose don't corrupt their Twitter names.
  
      - Eliminate some redundant use of the regex engine in the Words
        tokenizer.

    - The utils/hailo-benchmark script had been broken for some time
      due to a trivial API change in Hailo::Test. Now it works again.
  
0.43 2010-05-11 19:54:36

    - Tests failed on 0.42 without Test::Synopsis due to invalid test plan.

    - Don't test with both Mouse and Moose on Windows. Failed with
      Strawberry Perl + dmake, see report
      07242729-b19f-3f77-b713-d32bba55d77f.

    - Skip t/storage/001_meta/switch-order.t on OpenBSD where it's
      known to fail, see report 07172161-b19f-3f77-b713-d32bba55d77f.

0.42 2010-05-10 21:26:45

    - Hailo should now work on Windows. Dependency on two modules that
      had Windows failures in their dependencies has been dropped.

    - Remove Term::ProgressBar dependency, use Term::Sk
      instead. Unlike Term::ProgressBar it doesn't depend on
      Class::MethodMaker and Term::ReadKey. Those contributed a lot to
      our failures on Windows.
    
    - Don't hard depend on Test::Expect. It depends IO::Tty which does
      not work under any version of Windows, except under Cygwin (it
      calls fcntl(*fd, F_DUPFD, 3)).

    - Remove Test::Synopsis dependency. It depends on
      Filter::Util::Call which had some failures. Now only used if
      it's installed on the system already.

    - Remove MouseX/MooseX::Types dependency. We don't use any of the
      fancy type features, so there's no point in using this.

0.41 2010-04-23 00:24:24

    - Don't (optionally) use Sys::Prctl on Perl 5.13.0 and above. It
      was made redundant in perl core commit 7636ea95c5 by yours
      truly.
